# matchpy

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  environment.yml  make.bat  notes.org  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-build.yml  python-publish.yml
docs/: Makefile  conf.py  example.rst  glossary.rst  index.rst  make.bat  modules.rst  patternmatcher.rst
docs/api/: matchpy.expressions.base.rst  matchpy.expressions.constraints.rst  matchpy.expressions.expressions.rst  matchpy.expressions.frozen.rst  matchpy.expressions.functions.rst  matchpy.expressions.rst  matchpy.expressions.substitution.rst  matchpy.functions.rst  matchpy.matching.bipartite.rst  matchpy.matching.common.rst  matchpy.matching.many_to_one.rst  matchpy.matching.one_to_one.rst  matchpy.matching.rst  matchpy.matching.syntactic.rst  matchpy.rst  matchpy.utils.rst  modules.rst  patternmatcher.bipartite.rst  patternmatcher.constraints.rst  patternmatcher.expressions.base.rst  patternmatcher.expressions.constraints.rst  patternmatcher.expressions.expressions.rst  patternmatcher.expressions.frozen.rst  patternmatcher.expressions.rst  patternmatcher.expressions.substitution.rst  patternmatcher.functions.rst  patternmatcher.matching.automaton.rst  patternmatcher.matching.bipartite.rst  patternmatcher.matching.common.rst  patternmatcher.matching.many_to_one.rst  patternmatcher.matching.one_to_one.rst  patternmatcher.matching.rst  patternmatcher.matching.syntactic.rst  patternmatcher.multiset.rst  patternmatcher.rst  patternmatcher.syntactic.rst  patternmatcher.tmp.rst  patternmatcher.utils.rst
joss_paper/: paper.bib  paper.json  paper.md
matchpy/: __init__.py  _version.py  functions.py  utils.py
patternmatcher/: __init__.py  bipartite.py  constraints.py  expressions.py  functions.py  matching.py  multiset.py  syntactic.py  utils.py
tests/: common.py  conftest.py  context.py  test_bipartite.py  test_code_generation.py  test_constraints.py  test_contraints.py  test_expressions.py  test_functions.py  test_hopcroft_karp.py  test_matching.py  test_matching_advanced.py  test_matching_common.py  test_matching_many_to_one.py  test_matching_native.py  test_multiset.py  test_substitutions.py  test_syntactic.py  test_utils.py  utils.py
(+37 files in other folders)
